--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -7,4 +7,5 @@
     <string name="continue_tx">continue</string>
     <string name="back_up_your_wallet_now">Back up your wallet now!</string>
     <string name="your_recovery_phrase">Your recovery phrase</string>
+    <string name="address_desc">You can watch any public address without divulging your private key. This lets you view balance and transactions, but not send transactions</string>
 </resources>
