--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="your_recovery_phrase">Your recovery phrase</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="address_desc">You can watch any public address without divulging your private key. This lets you view balance and transactions, but not send transactions</string>
 </resources>
