--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -8,4 +8,5 @@
     <string name="back_up_your_wallet_now">Back up your wallet now!</string>
     <string name="your_recovery_phrase">Your recovery phrase</string>
     <string name="address_desc">You can watch any public address without divulging your private key. This lets you view balance and transactions, but not send transactions</string>
+    <string name="about_desc">BossPal - is a non-custodian crypto wallet, that enable user to securely store, swap, earn and win crypto (Popular Coin, BEP20 Token and ERC20 Token). BossPal is developed and owned by Tajiri Global Team.</string>
 </resources>
