--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="address_desc">You can watch any public address without divulging your private key. This lets you view balance and transactions, but not send transactions</string>
+    <string name="about_desc">BossPal - is a non-custodian crypto wallet, that enable user to securely store, swap, earn and win crypto (Popular Coin, BEP20 Token and ERC20 Token). BossPal is developed and owned by Tajiri Global Team.</string>
 </resources>
